# backend-hackathon

./: .dockerignore  .gitignore  Dockerfile.service  README.md  docker-compose.prod.yml  docker-compose.yml  family-bugget.xlsx  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: ai-context-builder-backend-integration.md  audit-report.md  backend-architecture-levels.md  backend-er-diagram.md  backend-plan.md  production-backlog.md  redis-usage.md  Формулы_финансового_здоровья_и_ИИ_агенты.docx  Формулы_финансового_здоровья_и_ИИ_агенты.md
docs/ai-integration-samples/: category_profiles.sample.json  debts.sample.json  goals.sample.json  previous_period_transactions.sample.json  transactions.sample.json  user_context.sample.json
infra/: .env.example  firebase-service-account.json.example
infra/rabbitmq/: definitions.json  rabbitmq.conf
libs/common/common/: __init__.py  agent_debug_log.py  db.py  firebase_config.py  http.py  lifespan.py  messaging.py  pagination.py  redis_cache.py  redis_client.py  security.py  service_app.py
scripts/: extract_handlers.py  setup-dev.ps1
services/access_service/app/: config.py  db.py  handlers.py  main.py  (+2 more)
services/migration_service/: alembic.ini
tests/: conftest.py  test_analytics_boundaries.py  test_backend_data_worker.py  test_categories_list.py  test_chat_workflow_publish.py  test_chat_workflow_result.py  test_create_bucket_policy.py  test_family_budget_parser.py  test_finance_reference_validation.py  test_firebase_config.py  test_gateway_openapi.py  test_health_score_service.py  test_integration_rabbitmq_import.py  test_message_idempotency.py  test_messaging_envelope.py  test_messaging_publish.py  test_messaging_request_async.py  test_messaging_retry.py  test_messaging_run_sync.py  test_migration_bootstrap.py  test_redis_cache.py  test_scheduler_boundaries.py  test_security.py  test_transaction_filters.py  test_workflow_result_content.py
(+103 files in other folders)
